# portfolio

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
docs/: 계획.md  스타일 가이드.md
docs/design/: 00_common_principles.md
docs/weeks/Week01/: checklist.md  learn.md  note.md
docs/weeks/Week02/: checklist.md
docs/weeks/Week03/: checklist.md
docs/weeks/Week04/: checklist.md
docs/weeks/Week05/: checklist.md
docs/weeks/Week06/: checklist.md
docs/weeks/Week07/: checklist.md
docs/weeks/Week08/: checklist.md
docs/weeks/Week09/: checklist.md
docs/weeks/Week10/: checklist.md
include/: defs.hpp
include/Core/: Window.hpp
src/: main.cpp
src/Core/: Window.cpp
